--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 :root {
+  
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -10,6 +11,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
@@ -17,17 +19,17 @@
 }
 
 body {
+  
   color: rgb(var(--foreground-rgb));
+  /* background-image:url('C:\Users\HP\Desktop\text-extractor-tool\public\background.webp'); */
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+
+  font-family: "Faktum Test", sans-serif;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
+@import url("https://fonts.cdnfonts.com/css/faktum-test");
